[metadata]
name = turret
version = 0.1.0
description = Discover, analyze, manage, attack and defend computer networks
long_description = file: README.rst, HISTORY.rst
keywords = turret
licence = MIT licence
author = Erwin Janssen
author_email = erwinjanssen@outlook.com
url = https://github.com/VanJanssen/turret
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Click >= 6.0
    psutil >= 4.4.0
    xmltodict==0.11.0
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    turret = turret.core.cli:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:turret/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest
# Define setup.py command aliases here
